--- a/main.html
+++ b/main.html
@@ -8,6 +8,40 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header><h3>Feedback Form</h3>
+		<form>
+			<label for="name">
+			<input type="text" placeholder="name" id="name" minlength="3" maxlength="50">
+			</label>
+			<br><br>
+			<label for="portfolio">
+			<input type="text" placeholder="portfolio" id="portfolio" minlength="3" maxlength="50">
+			</label>
+			<br>
+			<input type="submit" value="submit"></input>
+			<br><br>
+			<h4>select your favourite colour.</h4>
+			<label for="101">
+			<input type="radio" value="Red" name="color" id="101"> Red
+			</label>
+			<br>
+			<label for="102">
+			<input type="radio" value="Yellow" name="color" id="102"> Yellow
+			</label>
+			<br>
+			<label for="103">
+			<input type="radio" value="Black" name="color" id="103"> Black
+			</label>
+			<br>
+			<label for="104">
+			<input type="radio" value="Pink" name="color" id="104"> Pink
+			</label>
+			<br>
+			<h5>likeness</h5>
+			<label for="points">
+            <input type="range" id="points" name="points" min="1" max="100">
+				</label>
+		</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
