--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 			</label>
 			<br><br>
 			<label for="portfolio">
-			<input id="myURL" name="myURL" type="url" placeholder="http://www.example.com" />
+			<input id="portfolio" name="portfolio" type="url" placeholder="http://www.example.com" />
 			</label>
 			<br>
 			<input type="submit" value="submit"></input>
