--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<header><h3>Feedback Form</h3>
-		<form action="/action_page.php" method="get">
+		<form action="/action_page.php" method="post">
 			<label for="name">
 			<input type="text" placeholder="name" id="name" minlength="3" maxlength="50">
 			</label>
@@ -22,7 +22,7 @@
 			<br><br>
 			<h4>select your favourite colour.</h4>
 			<label for="101">
-			<input type="radio" value="Red" name="color" id="101"> Red
+			<input type="radio" value="Red" name="favColor" id="101"> Red
 			</label>
 			<br>
 			<label for="102">
