--- a/main.html
+++ b/main.html
@@ -22,19 +22,19 @@
 			<br><br>
 			<h4>select your favourite colour.</h4>
 			<label for="101">
-			<input type="radio" value="Red" name="favColor" id="101"> Red
+			<input type="radio" value="Red" name="#favColor" id="101"> Red
 			</label>
 			<br>
 			<label for="102">
-			<input type="radio" value="Yellow" name="color" id="102"> Yellow
+			<input type="radio" value="Yellow" name="#favColor" id="102"> Yellow
 			</label>
 			<br>
 			<label for="103">
-			<input type="radio" value="Black" name="color" id="103"> Black
+			<input type="radio" value="Black" name="#favColor" id="103"> Black
 			</label>
 			<br>
 			<label for="104">
-			<input type="radio" value="Pink" name="color" id="104"> Pink
+			<input type="radio" value="Pink" name="#favColor" id="104"> Pink
 			</label>
 			<br>
 			<h5>likeness</h5>
