--- a/main.html
+++ b/main.html
@@ -21,21 +21,9 @@
 			<input type="submit" value="submit"></input>
 			<br><br>
 			<h4>select your favourite colour.</h4>
-			<label for="101">
-			<input type="radio" value="Red" name="#favColor" id="101"> Red
-			</label>
-			<br>
-			<label for="102">
-			<input type="radio" value="Yellow" name="#favColor" id="102"> Yellow
-			</label>
-			<br>
-			<label for="103">
-			<input type="radio" value="Black" name="#favColor" id="103"> Black
-			</label>
-			<br>
-			<label for="104">
-			<input type="radio" value="Pink" name="#favColor" id="104"> Pink
-			</label>
+			<label for="favcolor">Select your favorite color:
+           <input type="color" id="favcolor" name="favcolor" value="#ff0000">
+				</label>
 			<br>
 			<h5>likeness</h5>
 			<label for="points">
