--- a/main.html
+++ b/main.html
@@ -8,29 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<header><h3>Feedback Form</h3>
-		<form action="/action_page.php" method="post">
-			<label for="name">
-			<input type="text" placeholder="name" id="name" minlength="3" maxlength="50">
-			</label>
-			<br><br>
-			<label for="portfolio">
-			<input id="portfolio" name="portfolio" type="url" placeholder="http://www.example.com" />
-			</label>
-			<br>
-			<input type="submit" value="submit"></input>
-			<br><br>
-			<h4>select your favourite colour.</h4>
-			<label for="favcolor">Select your favorite color:
-           <input type="color" id="favcolor" name="favcolor" value="#ff0000">
-				</label>
-			<br>
-			<h5>likeness</h5>
-			<label for="points">
-            <input type="range" id="points" name="points" min="1" max="100">
-				</label>
-		</form>
-    <script type="text/javascript" src="./script.js">
+    <h1>Feedback Form</h1>
+	<form action="/submit" method="post">
+		<label for="name">Enter your Name</label>
+		<input minlength="3" maxlength="50" required id="name" type="text" name="name" placeholder="Enter your name"><br><br>
+	<label for="portfolio" >Enter your portfolio</label>
+		<input  required id="portfolio" type="url" name="portfolio" placeholder="Enter your portfolio"><br><br>
+	<label for="favColor">Enter your favColor </label>
+		<input type="color" name="favColor" id="favColor"><br><br>
+	<label for="likeness" >Enter your likeness</label>
+		<input type="range" name="likeness" id="likeness"min="1" max="100">
+		<button>Submit</button>
+	</form>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
